refactor(core): redesign BeanDefinition — remove needsProxy field, add conditionalOnBeanType, methodLevelReplaces, exceptionHandlerMethods, methodBindingAnnotations
- Remove
eedsProxy mutable field → derive via
eedsProxy() method from interceptorBindingAnnotations + isInterceptor
- Add conditionalOnBeanType (class-level @ConditionalOnBean target)
- Add methodConditionalOnBeanType (method-level @ConditionalOnBean target)
- Add methodLevelReplaces (method-level @Replaces return type)
- Add methodBindingAnnotations (Map<String,Set<String>> for method-level interceptor bindings)
- Add xceptionHandlerMethods (List<ExceptionHandlerEntry>)
- Simplify ConfigPropertiesBean (remove old Builder reference)